maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:16: error: expected class or object definition
def keepHandOnWallSide(){
^IslandMaze:26: error: Unmatched closing brace '}' ignored here
  }} 
   ^